crates/sigil-compiler/tests/snapshots/snap_wat__all_machine_integer_types.snap
---
source: crates/sigil-compiler/tests/snap_wat.rs
expression: wat
---
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i32 i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32 i64) (result i64)))
  (type (;3;) (func (param i32 i32 i32 i32 i32) (result i32)))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (param i32 i32) (result i32)))
  (type (;6;) (func (param i32 i64) (result i32)))
  (type (;7;) (func (result i32)))
  (type (;8;) (func (param i32) (result i32)))
  (type (;9;) (func (param i32) (result i32)))
  (type (;10;) (func (param i64) (result i64)))
  (type (;11;) (func (param i64) (result i64)))
  (type (;12;) (func (param f64) (result f64)))
  (import "sigil" "fuel_decrement" (func (;0;) (type 0)))
  (import "sigil" "send" (func (;1;) (type 1)))
  (import "sigil" "ask" (func (;2;) (type 2)))
  (import "sigil" "spawn" (func (;3;) (type 3)))
  (import "sigil" "alloc" (func (;4;) (type 4)))
  (import "sigil" "cap_restrict" (func (;5;) (type 5)))
  (import "sigil" "cap_split" (func (;6;) (type 6)))
  (import "sigil" "cap_mint" (func (;7;) (type 7)))
  (table (;0;) 5 5 funcref)
  (memory (;0;) 1)
  (global (;0;) (mut i32) i32.const 1024)
  (export "memory" (memory 0))
  (export "BUMP_PTR" (global 0))
  (export "m__i32_param" (func 8))
  (export "m__u32_param" (func 9))
  (export "m__i64_param" (func 10))
  (export "m__u64_param" (func 11))
  (export "m__f64_param" (func 12))
  (elem (;0;) (table 0) (i32.const 0) func 8 9 10 11 12)
  (func (;8;) (type 8) (param i32) (result i32)
    local.get 0
    return
  )
  (func (;9;) (type 9) (param i32) (result i32)
    local.get 0
    return
  )
  (func (;10;) (type 10) (param i64) (result i64)
    local.get 0
    return
  )
  (func (;11;) (type 11) (param i64) (result i64)
    local.get 0
    return
  )
  (func (;12;) (type 12) (param f64) (result f64)
    local.get 0
    return
  )
)
