crates/sigil-compiler/tests/snapshots/snap_wat__enum_with_payload_variant.snap
---
source: crates/sigil-compiler/tests/snap_wat.rs
expression: wat
---
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i32 i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32 i64) (result i64)))
  (type (;3;) (func (param i32 i32 i32 i32 i32) (result i32)))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (param i32 i32) (result i32)))
  (type (;6;) (func (param i32 i64) (result i32)))
  (type (;7;) (func (result i32)))
  (type (;8;) (func (param i64) (result i32)))
  (type (;9;) (func))
  (type (;10;) (func))
  (import "sigil" "fuel_decrement" (func (;0;) (type 0)))
  (import "sigil" "send" (func (;1;) (type 1)))
  (import "sigil" "ask" (func (;2;) (type 2)))
  (import "sigil" "spawn" (func (;3;) (type 3)))
  (import "sigil" "alloc" (func (;4;) (type 4)))
  (import "sigil" "cap_restrict" (func (;5;) (type 5)))
  (import "sigil" "cap_split" (func (;6;) (type 6)))
  (import "sigil" "cap_mint" (func (;7;) (type 7)))
  (table (;0;) 3 3 funcref)
  (memory (;0;) 1)
  (global (;0;) (mut i32) i32.const 1024)
  (export "memory" (memory 0))
  (export "BUMP_PTR" (global 0))
  (export "m__wrap" (func 8))
  (export "option__init" (func 9))
  (export "result__init" (func 10))
  (elem (;0;) (table 0) (i32.const 0) func 8 9 10)
  (func (;8;) (type 8) (param i64) (result i32)
    (local i32 i32)
    i32.const 1
    call 0
    i32.const 12
    call 4
    local.set 1
    i32.const 1
    local.set 2
    local.get 1
    local.get 2
    i32.store
    local.get 1
    local.get 0
    i64.store offset=4
    local.get 1
    return
  )
  (func (;9;) (type 9)
    return
  )
  (func (;10;) (type 10)
    return
  )
)
