crates/sigil-compiler/tests/snapshots/snap_wat__polymorphic_int_literal_at_binding.snap
---
source: crates/sigil-compiler/tests/snap_wat.rs
expression: wat
---
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i32 i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32 i64) (result i64)))
  (type (;3;) (func (param i32 i32 i32 i32 i32) (result i32)))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (param i32 i32) (result i32)))
  (type (;6;) (func (param i32 i64) (result i32)))
  (type (;7;) (func (result i32)))
  (type (;8;) (func (result i32)))
  (import "sigil" "fuel_decrement" (func (;0;) (type 0)))
  (import "sigil" "send" (func (;1;) (type 1)))
  (import "sigil" "ask" (func (;2;) (type 2)))
  (import "sigil" "spawn" (func (;3;) (type 3)))
  (import "sigil" "alloc" (func (;4;) (type 4)))
  (import "sigil" "cap_restrict" (func (;5;) (type 5)))
  (import "sigil" "cap_split" (func (;6;) (type 6)))
  (import "sigil" "cap_mint" (func (;7;) (type 7)))
  (table (;0;) 1 1 funcref)
  (memory (;0;) 1)
  (global (;0;) (mut i32) i32.const 1024)
  (export "memory" (memory 0))
  (export "BUMP_PTR" (global 0))
  (export "m__pinned" (func 8))
  (elem (;0;) (table 0) (i32.const 0) func 8)
  (func (;8;) (type 8) (result i32)
    (local i32)
    i32.const 42
    local.set 0
    local.get 0
    return
  )
)
