crates/sigil-compiler/tests/snapshots/snap_wat__range_for_basic.snap
---
source: crates/sigil-compiler/tests/snap_wat.rs
expression: wat
---
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i32 i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32 i64) (result i64)))
  (type (;3;) (func (param i32 i32 i32 i32 i32) (result i32)))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (param i32 i32) (result i32)))
  (type (;6;) (func (param i32 i64) (result i32)))
  (type (;7;) (func (result i32)))
  (type (;8;) (func (param i32) (result i64)))
  (import "sigil" "fuel_decrement" (func (;0;) (type 0)))
  (import "sigil" "send" (func (;1;) (type 1)))
  (import "sigil" "ask" (func (;2;) (type 2)))
  (import "sigil" "spawn" (func (;3;) (type 3)))
  (import "sigil" "alloc" (func (;4;) (type 4)))
  (import "sigil" "cap_restrict" (func (;5;) (type 5)))
  (import "sigil" "cap_split" (func (;6;) (type 6)))
  (import "sigil" "cap_mint" (func (;7;) (type 7)))
  (table (;0;) 1 1 funcref)
  (memory (;0;) 1)
  (global (;0;) (mut i32) i32.const 1024)
  (export "memory" (memory 0))
  (export "BUMP_PTR" (global 0))
  (export "m__sum3" (func 8))
  (elem (;0;) (table 0) (i32.const 0) func 8)
  (func (;8;) (type 8) (param i32) (result i64)
    (local i64 i64 i64 i64 i64 i32 i64 i64)
    i64.const 0
    local.set 1
    i64.const 0
    local.set 2
    i64.const 3
    local.set 3
    local.get 2
    local.set 4
    local.get 3
    local.set 5
    block ;; label = @1
      loop ;; label = @2
        local.get 4
        local.get 5
        i64.lt_s
        local.set 6
        i32.const 1
        call 0
        local.get 6
        i32.eqz
        br_if 1 (;@1;)
        local.get 0
        local.get 4
        i32.wrap_i64
        i32.const 8
        i32.mul
        i32.add
        i64.load offset=4
        local.set 8
        local.get 1
        local.get 8
        i64.add
        local.set 1
        i64.const 1
        local.set 7
        local.get 4
        local.get 7
        i64.add
        local.set 4
        br 0 (;@2;)
      end
    end
    local.get 1
    return
  )
)
