crates/sigil-compiler/tests/snapshots/snap_wat__region_reclaim.snap
---
source: crates/sigil-compiler/tests/snap_wat.rs
expression: wat
---
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i32 i32 i32)))
  (type (;2;) (func (param i32 i32 i32 i32 i64) (result i64)))
  (type (;3;) (func (param i32 i32 i32 i32 i32) (result i32)))
  (type (;4;) (func (param i32) (result i32)))
  (type (;5;) (func (param i32 i32) (result i32)))
  (type (;6;) (func (param i32 i64) (result i32)))
  (type (;7;) (func (result i32)))
  (type (;8;) (func (result i64)))
  (import "sigil" "fuel_decrement" (func (;0;) (type 0)))
  (import "sigil" "send" (func (;1;) (type 1)))
  (import "sigil" "ask" (func (;2;) (type 2)))
  (import "sigil" "spawn" (func (;3;) (type 3)))
  (import "sigil" "alloc" (func (;4;) (type 4)))
  (import "sigil" "cap_restrict" (func (;5;) (type 5)))
  (import "sigil" "cap_split" (func (;6;) (type 6)))
  (import "sigil" "cap_mint" (func (;7;) (type 7)))
  (table (;0;) 1 1 funcref)
  (memory (;0;) 1)
  (global (;0;) (mut i32) i32.const 1024)
  (export "memory" (memory 0))
  (export "BUMP_PTR" (global 0))
  (export "m__run" (func 8))
  (elem (;0;) (table 0) (i32.const 0) func 8)
  (func (;8;) (type 8) (result i64)
    (local i32 i64 i32 i64 i64 i64 i64)
    i64.const 64
    local.set 1
    global.get 0
    local.set 2
    i64.const 42
    local.set 3
    i64.const 1
    local.set 5
    local.get 3
    local.get 5
    i64.add
    local.set 4
    global.get 0
    local.get 2
    i32.sub
    local.get 1
    i32.wrap_i64
    i32.gt_u
    if ;; label = @1
      unreachable
    end
    local.get 2
    global.set 0
    i64.const 1
    local.set 6
    local.get 6
    return
  )
)
